--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "timestamped-lyrics",
-  "version": "1.0.2hf",
+  "version": "1.0.3",
   "description": "Simple Package to fetch and display timestamped lyrics for a given song.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
